# aether-architecture

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
aether-core/: Cargo.toml
aether-core/benches/: aether_bench.rs
aether-core/examples/: hopping_demo.rs  tls_demo.rs
aether-core/src/: aether.rs  buffer_pool.rs  channel.rs  config.rs  lib.rs  observability.rs  operations.rs  persistence.rs  physics.rs  reliability.rs  resource_monitoring.rs  task_manager.rs  vibrator.rs  wave.rs
aether-core/tests/: fault_injection.rs  property_tests.rs
aether-gateway/: Cargo.toml
aether-gateway/src/: main.rs
aether-service-alpha/: Cargo.toml
aether-service-alpha/src/: main.rs
aether-service-beta/: Cargo.toml
aether-service-beta/src/: main.rs
config/: default.toml  nats-tls.conf
scripts/: gen_tls_certs.sh
