[workspace]
members = [
    "aether-core",
    "aether-service-alpha",
    "aether-service-beta",
    "aether-gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aether Architecture Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-nats = "0.38"
futures = "0.3"
