[package]
name = "aether-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
jemallocator = { workspace = true, optional = true }

[features]
jemalloc = ["jemallocator"]

[[bin]]
name = "gateway"
path = "src/main.rs"
